force-app/main/default/objects/VisualAntidote__Web_Services_Log__c/VisualAntidote__Web_Services_Log__c.object-meta.xml
<CustomObject>
    <label>Web Services Log</label>
    <nameField>
        <displayFormat>Log-{00000}</displayFormat>
        <label>Web Services Logs  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Services Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>