force-app/main/default/objects/VisualAntidote__Web_Services_Log__c/fields/VisualAntidote__Dataset__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Dataset__c</fullName>
    <label>Dataset</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>