force-app/main/default/objects/VisualAntidote__Web_Services_Log__c/fields/VisualAntidote__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Field_Name__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>