force-app/main/default/objects/VisualAntidote__Web_Services_Log__c/fields/VisualAntidote__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Field_Type__c</fullName>
    <label>Field Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>