force-app/main/default/objects/VisualAntidote__Web_Services_Log__c/fields/VisualAntidote__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>