force-app/main/default/objects/VisualAntidote__Web_Services_Log__c/fields/VisualAntidote__Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Salesforce_ID__c</fullName>
    <label>Salesforce ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>