force-app/main/default/objects/VisualAntidote__Web_Services_Log__c/fields/VisualAntidote__SF_Org_Instance_ID__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__SF_Org_Instance_ID__c</fullName>
    <label>SF Org Instance ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>