force-app/main/default/objects/VisualAntidote__Web_Services_Log__c/fields/VisualAntidote__Type__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>