force-app/main/default/objects/VisualAntidote__Web_Services_Log__c/listViews/VisualAntidote__All.listView-meta.xml
<ListView>
    <fullName>VisualAntidote__All</fullName>
    <columns>NAME</columns>
    <columns>VisualAntidote__Type__c</columns>
    <columns>VisualAntidote__SF_Org_Instance_ID__c</columns>
    <columns>VisualAntidote__Object_Name__c</columns>
    <columns>VisualAntidote__Object_Type__c</columns>
    <columns>VisualAntidote__Field_Name__c</columns>
    <columns>VisualAntidote__Field_Type__c</columns>
    <columns>VisualAntidote__Dataset__c</columns>
    <columns>VisualAntidote__Salesforce_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>